# cargo-local-serve

./: .gitignore  Cargo.toml  README.md  USAGE.md  config.toml.example
all-crate-grep/: Cargo.toml  main.rs
all-crate-storage/: Cargo.toml  blob_crate_storage.rs  crate_storage.rs  lib.rs  multi_blob_crate_storage.rs  reconstruction.rs
all-crate-storage/registry/: statistics.rs
all-crates-storage/: Cargo.toml  blob_crate_storage.rs  blob_storage.rs  blob_storage_test.rs  diff.rs
all_crates_storage/: Cargo.toml  blob_crate_storage.rs  blob_storage.rs  crate_storage.rs  diff.rs  hash_ctx.rs  lib.rs  multi_blob.rs  multi_blob_crate_storage.rs  reconstruction.rs
all_crates_storage/registry/: registry.rs
cargo-local-serve/: Cargo.toml  code_format.rs  main.rs  markdown_render.rs  registry_data.rs  syntect_format.rs
cargo-local-serve/site/static/: style.css
cargo-local-serve/site/templates/: crate-error.hbs  crate.hbs  file-listing.hbs  versions.hbs
cargo_local_serve/: Cargo.toml  main.rs  registry_data.rs
cargo_local_serve/site/templates/: crate.hbs  file-content.hbs  index.hbs  search.hbs
site/static/: style.css
site/templates/: 404.hbs  crate.hbs  error.hbs  file-content.hbs  file-listing.hbs  frame.hbs  index.hbs  reverse_dependencies.hbs  versions.hbs
src/: blob_storage.rs  code_format.rs  hash_ctx.rs  lib.rs  main.rs  markdown_render.rs  reconstruction.rs  registry_data.rs
src/registry/: mod.rs  registry.rs  statistics.rs
