[package]
name = "cargo-local-serve"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["est31 <MTest31@outlook.com>"]

[dependencies]
handlebars-iron = "0.25"
serde = "1.0.0"
serde_json = "1.0.0"
iron = "0.5.0"
serde_derive = "1.0.0"
env_logger = "0.4"
flate2 = "0.2"
staticfile = { version = "0.4", features = ["cache"] }
mount = "0.3"
urlencoded = "0.5"
tar = "0.4"
toml = "0.4.5"
semver = { version = "0.9", features = ["serde"] }
hyper = "0.10"
pulldown-cmark = { version = "0.1.0", default-features = false }
ammonia = "1.0.0"
syntect = "1.8"
lazy_static = "0.2"
string-interner = "0.6.3"
