[package]
name = "cargo-local-serve"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["est31 <MTest31@outlook.com>"]

[dependencies]

#iron related
handlebars-iron = "0.25"
iron = "0.5.0"
staticfile = { version = "0.4", features = ["cache"] }
urlencoded = "0.6"
mount = "0.3"
hyper = "0.10"

# markdown rendering
pulldown-cmark = { version = "0.1.0", default-features = false }
ammonia = "1.0.0"
syntect = "1.8"

# all the other stuff
toml = "0.4.5"
string-interner = "0.6.3"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
env_logger = "0.4"
flate2 = "=1.0.1"
tar = "0.4"
semver = { version = "0.9", features = ["serde"] }
lazy_static = "0.2"
git2 = "0.6"
failure = "0.1.0"
failure_derive = "0.1.0"
reqwest = "0.8"
ring = "0.12.1"
pbr = "1.0.0"
