[package]
name = "all-crate-storage"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["est31 <MTest31@outlook.com>"]

[lib]
path = "lib.rs"

[[bin]]
name = "analyze-all-crates"
path = "bin/analyze-all-crates.rs"

[[bin]]
name = "diff-all-crates"
path = "bin/diff-all-crates.rs"

[[bin]]
name = "download-all-crates"
path = "bin/download-all-crates.rs"

[[bin]]
name = "create-crate-storage"
path = "bin/create-crate-storage.rs"

[[bin]]
name = "create-mb-crate-storage"
path = "bin/create-mb-crate-storage.rs"

[[bin]]
name = "diff"
path = "bin/diff.rs"

[dependencies]

try = "1.0.0"

# Needed by the binaries
pbr = "1.0.0"
reqwest = "0.9"

# all the other stuff
string-interner = "0.7"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
flate2 = "1.0"
tar = "0.4"
semver = { version = "0.10", features = ["serde"] }
git2 = "0.13"
failure = "0.1.0"
failure_derive = "0.1.0"
ring = "0.16"
byteorder = "1.0.0"
multiqueue = "0.3"
hex = "0.4.0"
difference = "2.0"
petgraph = "0.5"
