[package]
name = "all_crates_storage"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["est31 <MTest31@outlook.com>"]

[lib]
path = "lib.rs"

[[bin]]
name = "analyze-all-crates"
path = "bin/analyze-all-crates.rs"

[[bin]]
name = "diff-all-crates"
path = "bin/diff-all-crates.rs"

[[bin]]
name = "download-all-crates"
path = "bin/download-all-crates.rs"

[[bin]]
name = "create-crate-storage"
path = "bin/create-crate-storage.rs"

[dependencies]

# Needed by the binaries
pbr = "1.0.0"
reqwest = "0.8"

# all the other stuff
string-interner = "0.6.3"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
flate2 = "=1.0.1"
tar = "0.4"
semver = { version = "0.9", features = ["serde"] }
git2 = "0.6"
failure = "0.1.0"
failure_derive = "0.1.0"
ring = "0.13.0-alpha"
byteorder = "1.0.0"
multiqueue = "0.3"
base64 = "0.9.0"
