[package]
name = "cargo-local-serve"
version = "0.1.0"
license = "MIT/Apache-2.0"
authors = ["est31 <MTest31@outlook.com>"]

[[bin]]
name = "cargo-local-serve"
path = "main.rs"

[dependencies]

all-crates-storage = { path = "../all-crates-storage" }

#iron related
handlebars-iron = "0.27"
iron = "0.6.0"
staticfile = { version = "0.5", features = ["cache"] }
urlencoded = "0.6"
mount = "0.4"
hyper = "0.10"

# markdown rendering
pulldown-cmark = { version = "0.1.0", default-features = false }
ammonia = "1.0.0"
syntect = "2.0"

# all the other stuff
toml = "0.4.5"
serde = "1.0.0"
serde_json = "1.0.0"
serde_derive = "1.0.0"
env_logger = "0.5"
flate2 = "=1.0.1"
semver = { version = "0.9", features = ["serde"] }
lazy_static = "1.0"
failure = "0.1.0"
reqwest = "0.9"
